@@ -5,6 +5,8 @@
      Don't initialise compression buffers when compression=no in sshd_config;
      ok Niels@
   - ID sync for auth-passwd.c
+ - (djm) Warn and disable compression on platforms which can't handle both
+   useprivilegeseparation=yes and compression=yes
 
 20020620
  - (bal) Fixed AIX environment handling, use setpcred() instead of existing
@@ -994,4 +996,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2236 2002/06/21 06:05:12 djm Exp $
+$Id: ChangeLog,v 1.2237 2002/06/21 06:20:44 djm Exp $
